-
Bug
-
Resolution: Fixed
-
P1
-
11
-
b27
-
x86
-
linux_redhat_7.3
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8209314 | 12 | Robin Westberg | P1 | Resolved | Fixed | b07 |
| JDK-8209221 | 11.0.2 | Robin Westberg | P1 | Resolved | Fixed | b01 |
| JDK-8209296 | 11.0.1 | Robin Westberg | P1 | Resolved | Fixed | b05 |
I have a consistent crash on RHEL 7.5 (didn't try other OS yet) when testing Mission Control with the latest mercurial of JDK 11 (at the time of writing this is revision 3f5a55b6bad8 from http://hg.openjdk.java.net/jdk/client/).
The crash is consistent and happens every time, the application I'm testing is the J2Demo that comes with the same JDK 11. The JDK is compiled from command line with all default options, no custom patches or changes.
I'm attaching the hs_err.
Mission Control seems to be able to record some events before the target JVM crashes.
The crash is consistent and happens every time, the application I'm testing is the J2Demo that comes with the same JDK 11. The JDK is compiled from command line with all default options, no custom patches or changes.
I'm attaching the hs_err.
Mission Control seems to be able to record some events before the target JVM crashes.
- backported by
-
JDK-8209221 Missing NULL check and resource leak in NetworkPerformanceInterface::NetworkPerformance::network_utilization
-
- Resolved
-
-
JDK-8209296 Missing NULL check and resource leak in NetworkPerformanceInterface::NetworkPerformance::network_utilization
-
- Resolved
-
-
JDK-8209314 Missing NULL check and resource leak in NetworkPerformanceInterface::NetworkPerformance::network_utilization
-
- Resolved
-
- relates to
-
JDK-8003209 JFR events for network utilization
-
- Resolved
-