8208676: Missing NULL check and resource leak in NetworkPerformanceInterface::NetworkPerformance::network_utilization

Reviewed-by: mgronlun, rehn